Fixed form overflow issue

--- a/assets/additional/css/login-page_style.css
+++ b/assets/additional/css/login-page_style.css
@@ -33,10 +33,12 @@ body {
 }
 /*end*/
 
-/*reset password tab*/
+/*buttons*/
 @media only screen and (min-width: 200px) and (max-width: 580px) {
-    .reset-tab-btn1,
-    .reset-tab-btn2 {
+    .signin-tab-btn {
+        width: 75%;
+    }
+    .reset-tab-btn {
         width: 50%;
     }
 }
@@ -44,8 +46,10 @@ body {
  	
 }
 @media only screen and (min-width: 1200px) {
-    .reset-tab-btn1,
-    .reset-tab-btn2 {
+    .signin-tab-btn {
+        width: 30%;
+    }
+    .reset-tab-btn {
         width: 35%;
     }
 
